--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ QGLViewer/libQGLViewer.prl
 designerPlugin/libqglviewerplugin.dylib
 *.pro.user
 **/.qmake.stash
+**/.qmake.cache
 QGLViewer/ui_*.h
 examples/contribs/agora/Viewer/ui_agoraWindow.h
 examples/contribs/agora/Viewer/ui_computerPlayerInterface.h
@@ -16,4 +17,3 @@ examples/contribs/blobWar/Viewer/ui_blobWarWindow.h
 examples/contribs/blobWar/Viewer/ui_computerPlayerInterface.h
 examples/contribs/dvonn/ui_dvonnwindow.h
 QGLViewer/QGLViewer.framework/
-
