Add CMake integration.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ examples/contribs/blobWar/Viewer/ui_blobWarWindow.h
 examples/contribs/blobWar/Viewer/ui_computerPlayerInterface.h
 examples/contribs/dvonn/ui_dvonnwindow.h
 QGLViewer/QGLViewer.framework/
+build
+Build
+BUILD
