--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -257,3 +257,27 @@ install(TARGETS QGLViewer
         ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
         LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
         RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/camera.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/config.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/constraint.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/domUtils.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/frame.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/keyFrameInterpolator.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/manipulatedCameraFrame.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/manipulatedFrame.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/mouseGrabber.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/qglviewer.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/quaternion.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/vec.h"
+        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
