Put *.h in a dedicated directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,36 +262,37 @@ install(TARGETS QGLViewer
         ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
         LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
         RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
+set(QGLVIEWER_INSTALL_FULL_INCLUDEDIR "${CMAKE_INSTALL_FULL_INCLUDEDIR}/libQGLViewer")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/camera.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/config.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/constraint.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/domUtils.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/frame.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/keyFrameInterpolator.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/manipulatedCameraFrame.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/manipulatedFrame.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/mouseGrabber.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/qglviewer.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/quaternion.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/QGLViewer/vec.h"
-        DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+        DESTINATION "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 
 # Create pkg-config file.
 set(prefix "${CMAKE_INSTALL_PREFIX}")
 set(exec_prefix "${CMAKE_INSTALL_PREFIX}")
 set(libdir "${CMAKE_INSTALL_FULL_LIBDIR}")
-set(includedir "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+set(includedir "${QGLVIEWER_INSTALL_FULL_INCLUDEDIR}")
 set(PACKAGE_NAME "${PROJECT_NAME}")
 set(QGLViewer_VERSION "${QGLViewer_MAJOR_VERSION}.${QGLViewer_MINOR_VERSION}.${QGLViewer_PATCH_VERSION}")
 set(PACKAGE_VERSION "${QGLViewer_VERSION}")
