--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 .obj/
 .moc/
 *.app/
@@ -17,3 +18,4 @@ examples/contribs/blobWar/Viewer/ui_blobWarWindow.h
 examples/contribs/blobWar/Viewer/ui_computerPlayerInterface.h
 examples/contribs/dvonn/ui_dvonnwindow.h
 QGLViewer/QGLViewer.framework/
+QGLViewer/Library/Developer/*
