Remove half baked rangeAxisConstraint example

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 .obj/
 .moc/
-*.app/
 Makefile
-/doc/refManual/
-/examples/**/ui_*.h
 .qglviewer.xml
-QGLViewer/libQGLViewer.prl
-designerPlugin/libqglviewerplugin.dylib
+/doc/refManual/
+/examples/**/*.app/
+/examples/**/ui_*.h
+/QGLViewer/libQGLViewer.prl
+/QGLViewer/QGLViewer.framework/
+/QGLViewer/ui_*.h
+/designerPlugin/libqglviewerplugin.dylib
 *.pro.user
 **/.qmake.stash
 **/.qmake.cache
-QGLViewer/ui_*.h
-QGLViewer/QGLViewer.framework/
 build
 Build
 BUILD
