Set `/Library/Frameworks` as default install directory on macos (#63)
* set qmake default install directory on macos

* update gitignore for Qt6 when building on linux

* add 'make uninstall' command on qmake configuration

* update gitignore to ignore windows built files

Co-authored-by: Gilles Debunne <gilles.debunne@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 .obj/
 .moc/
 Makefile
@@ -8,6 +9,14 @@ Makefile
 /QGLViewer/libQGLViewer.prl
 /QGLViewer/QGLViewer.framework/
 /QGLViewer/ui_*.h
+/QGLViewer/libQGLViewer*.so*
+/QGLViewer/QGLViewer*.dll
+/QGLViewer/QGLViewer*.exp
+/QGLViewer/QGLViewer*.ilk
+/QGLViewer/QGLViewer*.lib
+/QGLViewer/QGLViewer*.pdb
+/QGLViewer/QGLViewer*.prl
+/QGLViewer/Library/Developer/*
 /designerPlugin/libqglviewerplugin.dylib
 *.pro.user
 **/.qmake.stash
