--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,17 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 
 # This will find the Qt files.
-find_package(Qt6 REQUIRED COMPONENTS Core Widgets Xml OpenGL OpenGLWidgets)
+find_package(Qt6 COMPONENTS Core Widgets Xml OpenGL OpenGLWidgets)
+if (Qt6_FOUND)
+    message("Building with Qt6")
+    set(QtLibs Qt::Core Qt::Widgets Qt::Xml Qt::OpenGL Qt::OpenGLWidgets)
+else()
+    find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Xml OpenGL)
+    message("Building with Qt5")
+    set(QtLibs Qt::Core Qt::Widgets Qt::Xml Qt::OpenGL)
+endif()
+
+
 find_package(OpenGL REQUIRED)
 
 # QGLViewer target.
@@ -49,80 +59,80 @@ set(QGLViewer_SRC
     "${PROJECT_SOURCE_DIR}/QGLViewer/saveSnapshot.cpp"
     "${PROJECT_SOURCE_DIR}/QGLViewer/vec.cpp")
 add_library(QGLViewer SHARED ${QGLViewer_SRC})
-target_link_libraries(QGLViewer PRIVATE Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets)
 target_include_directories(QGLViewer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(QGLViewer PRIVATE ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: animation.
 set(animation_SRC
     "${PROJECT_SOURCE_DIR}/examples/animation/animation.cpp"
     "${PROJECT_SOURCE_DIR}/examples/animation/main.cpp")
 add_executable(animation ${animation_SRC})
-target_include_directories(animation PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(animation QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(animation PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(animation QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: callback.
 set(callback_SRC
     "${PROJECT_SOURCE_DIR}/examples/callback/callback.cpp"
     "${PROJECT_SOURCE_DIR}/examples/callback/main.cpp")
 add_executable(callback ${callback_SRC})
-target_include_directories(callback PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(callback QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(callback PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(callback QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: cameraLight.
 set(cameraLight_SRC
     "${PROJECT_SOURCE_DIR}/examples/cameraLight/cameraLight.cpp"
     "${PROJECT_SOURCE_DIR}/examples/cameraLight/main.cpp")
 add_executable(cameraLight ${cameraLight_SRC})
-target_include_directories(cameraLight PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(cameraLight QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(cameraLight PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(cameraLight QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: clippingPlane.
 set(clippingPlane_SRC
     "${PROJECT_SOURCE_DIR}/examples/clippingPlane/clippingPlane.cpp"
     "${PROJECT_SOURCE_DIR}/examples/clippingPlane/main.cpp")
 add_executable(clippingPlane ${clippingPlane_SRC})
-target_include_directories(clippingPlane PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(clippingPlane QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(clippingPlane PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(clippingPlane QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: constrainedCamera.
 set(constrainedCamera_SRC
     "${PROJECT_SOURCE_DIR}/examples/constrainedCamera/constrainedCamera.cpp"
     "${PROJECT_SOURCE_DIR}/examples/constrainedCamera/main.cpp")
 add_executable(constrainedCamera ${constrainedCamera_SRC})
-target_include_directories(constrainedCamera PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(constrainedCamera QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(constrainedCamera PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(constrainedCamera QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: constrainedFrame.
 set(constrainedFrame_SRC
     "${PROJECT_SOURCE_DIR}/examples/constrainedFrame/constrainedFrame.cpp"
     "${PROJECT_SOURCE_DIR}/examples/constrainedFrame/main.cpp")
 add_executable(constrainedFrame ${constrainedFrame_SRC})
-target_include_directories(constrainedFrame PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(constrainedFrame QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(constrainedFrame PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(constrainedFrame QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: drawLight.
 set(drawLight_SRC
     "${PROJECT_SOURCE_DIR}/examples/drawLight/drawLight.cpp"
     "${PROJECT_SOURCE_DIR}/examples/drawLight/main.cpp")
 add_executable(drawLight ${drawLight_SRC})
-target_include_directories(drawLight PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(drawLight QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(drawLight PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(drawLight QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: fastDraw.
 set(fastDraw_SRC
     "${PROJECT_SOURCE_DIR}/examples/fastDraw/fastDraw.cpp"
     "${PROJECT_SOURCE_DIR}/examples/fastDraw/main.cpp")
 add_executable(fastDraw ${fastDraw_SRC})
-target_include_directories(fastDraw PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(fastDraw QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(fastDraw PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(fastDraw QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: frameTransform.
 set(frameTransform_SRC
     "${PROJECT_SOURCE_DIR}/examples/frameTransform/frameTransform.cpp"
     "${PROJECT_SOURCE_DIR}/examples/frameTransform/main.cpp")
 add_executable(frameTransform ${frameTransform_SRC})
-target_include_directories(frameTransform PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(frameTransform QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(frameTransform PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(frameTransform QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: frustumCulling.
 set(frustumCulling_SRC
@@ -131,56 +141,56 @@ set(frustumCulling_SRC
     "${PROJECT_SOURCE_DIR}/examples/frustumCulling/frustumCulling.cpp"
     "${PROJECT_SOURCE_DIR}/examples/frustumCulling/main.cpp")
 add_executable(frustumCulling ${frustumCulling_SRC})
-target_include_directories(frustumCulling PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(frustumCulling QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(frustumCulling PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(frustumCulling QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: interface.
 set(interface_SRC
     "${PROJECT_SOURCE_DIR}/examples/interface/interface.cpp"
     "${PROJECT_SOURCE_DIR}/examples/interface/main.cpp")
 add_executable(interface ${interface_SRC})
-target_include_directories(interface PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU "${PROJECT_SOURCE_DIR}/examples/interface")
-target_link_libraries(interface QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(interface PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU "${PROJECT_SOURCE_DIR}/examples/interface")
+target_link_libraries(interface QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: keyboardAndMouse.
 set(keyboardAndMouse_SRC
     "${PROJECT_SOURCE_DIR}/examples/keyboardAndMouse/keyboardAndMouse.cpp"
     "${PROJECT_SOURCE_DIR}/examples/keyboardAndMouse/main.cpp")
 add_executable(keyboardAndMouse ${keyboardAndMouse_SRC})
-target_include_directories(keyboardAndMouse PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(keyboardAndMouse QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(keyboardAndMouse PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(keyboardAndMouse QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: keyFrames.
 set(keyFrames_SRC
     "${PROJECT_SOURCE_DIR}/examples/keyFrames/keyFrames.cpp"
     "${PROJECT_SOURCE_DIR}/examples/keyFrames/main.cpp")
 add_executable(keyFrames ${keyFrames_SRC})
-target_include_directories(keyFrames PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(keyFrames QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(keyFrames PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(keyFrames QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: luxo.
 set(luxo_SRC
     "${PROJECT_SOURCE_DIR}/examples/luxo/luxo.cpp"
     "${PROJECT_SOURCE_DIR}/examples/luxo/main.cpp")
 add_executable(luxo ${luxo_SRC})
-target_include_directories(luxo PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(luxo QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(luxo PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(luxo QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: manipulatedFrame.
 set(manipulatedFrame_SRC
     "${PROJECT_SOURCE_DIR}/examples/manipulatedFrame/main.cpp"
     "${PROJECT_SOURCE_DIR}/examples/manipulatedFrame/manipulatedFrame.cpp")
 add_executable(manipulatedFrame ${manipulatedFrame_SRC})
-target_include_directories(manipulatedFrame PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(manipulatedFrame QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(manipulatedFrame PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(manipulatedFrame QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: mouseGrabber.
 set(mouseGrabber_SRC
     "${PROJECT_SOURCE_DIR}/examples/mouseGrabber/main.cpp"
     "${PROJECT_SOURCE_DIR}/examples/mouseGrabber/mouseGrabber.cpp")
 add_executable(mouseGrabber ${mouseGrabber_SRC})
-target_include_directories(mouseGrabber PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(mouseGrabber QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(mouseGrabber PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(mouseGrabber QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: multiSelect.
 set(multiSelect_SRC
@@ -189,48 +199,48 @@ set(multiSelect_SRC
     "${PROJECT_SOURCE_DIR}/examples/multiSelect/multiSelect.cpp"
     "${PROJECT_SOURCE_DIR}/examples/multiSelect/object.cpp")
 add_executable(multiSelect ${multiSelect_SRC})
-target_include_directories(multiSelect PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(multiSelect QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(multiSelect PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(multiSelect QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: multiView.
 set(multiView_SRC
     "${PROJECT_SOURCE_DIR}/examples/multiView/main.cpp"
     "${PROJECT_SOURCE_DIR}/examples/multiView/multiView.cpp")
 add_executable(multiView ${multiView_SRC})
-target_include_directories(multiView PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(multiView QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(multiView PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(multiView QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: overpainting.
 set(overpainting_SRC
     "${PROJECT_SOURCE_DIR}/examples/overpainting/main.cpp"
     "${PROJECT_SOURCE_DIR}/examples/overpainting/viewer.cpp")
 add_executable(overpainting ${overpainting_SRC})
-target_include_directories(overpainting PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(overpainting QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(overpainting PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(overpainting QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: screenCoordSystem.
 set(screenCoordSystem_SRC
     "${PROJECT_SOURCE_DIR}/examples/screenCoordSystem/main.cpp"
     "${PROJECT_SOURCE_DIR}/examples/screenCoordSystem/screenCoordSystem.cpp")
 add_executable(screenCoordSystem ${screenCoordSystem_SRC})
-target_include_directories(screenCoordSystem PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(screenCoordSystem QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(screenCoordSystem PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(screenCoordSystem QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: select.
 set(select_SRC
     "${PROJECT_SOURCE_DIR}/examples/select/main.cpp"
     "${PROJECT_SOURCE_DIR}/examples/select/select.cpp")
 add_executable(select ${select_SRC})
-target_include_directories(select PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(select QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(select PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(select QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: simpleViewer.
 set(simpleViewer_SRC
     "${PROJECT_SOURCE_DIR}/examples/simpleViewer/main.cpp"
     "${PROJECT_SOURCE_DIR}/examples/simpleViewer/simpleViewer.cpp")
 add_executable(simpleViewer ${simpleViewer_SRC})
-target_include_directories(simpleViewer PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(simpleViewer QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(simpleViewer PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(simpleViewer QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: standardCamera.
 set(standardCamera_SRC
@@ -239,16 +249,16 @@ set(standardCamera_SRC
     "${PROJECT_SOURCE_DIR}/examples/standardCamera/standardCamera.cpp"
     "${PROJECT_SOURCE_DIR}/examples/standardCamera/viewer.cpp")
 add_executable(standardCamera ${standardCamera_SRC})
-target_include_directories(standardCamera PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(standardCamera QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(standardCamera PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(standardCamera QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Example: stereoViewer.
 set(stereoViewer_SRC
     "${PROJECT_SOURCE_DIR}/examples/stereoViewer/main.cpp"
     "${PROJECT_SOURCE_DIR}/examples/stereoViewer/stereoViewer.cpp")
 add_executable(stereoViewer ${stereoViewer_SRC})
-target_include_directories(stereoViewer PRIVATE QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
-target_link_libraries(stereoViewer QGLViewer Qt6::Core Qt6::Widgets Qt6::Xml Qt6::OpenGL Qt6::OpenGLWidgets OpenGL::GL OpenGL::GLU)
+target_include_directories(stereoViewer PRIVATE QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
+target_link_libraries(stereoViewer QGLViewer ${QtLibs} OpenGL::GL OpenGL::GLU)
 
 # Install.
 include(GNUInstallDirs)
