--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ if(POLICY CMP0048)
   cmake_policy(SET CMP0048 NEW)
 endif()
 
-project(libQGLViewer LANGUAGES CXX VERSION 2.9.1)
 cmake_minimum_required(VERSION 3.16)
+project(libQGLViewer LANGUAGES CXX VERSION 2.9.1)
 
 # Qt6 minimum compiler version
 set(CMAKE_CXX_STANDARD 17)
@@ -17,13 +17,14 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 
 # This will find the Qt files.
-find_package(Qt6 COMPONENTS Core Widgets Xml OpenGL OpenGLWidgets)
-if (Qt6_FOUND)
-    message("Building with Qt6")
-    set(QtLibs Qt::Core Qt::Widgets Qt::Xml Qt::OpenGL Qt::OpenGLWidgets)
-else()
-    find_package(Qt5 5.15 REQUIRED COMPONENTS Core Widgets Xml OpenGL)
-    message("Building with Qt5")
+#find_package(Qt6 COMPONENTS Core Widgets Xml OpenGL OpenGLWidgets)
+#if (Qt6_FOUND)
+#    message("Qt6 found!")
+#    set(QtLibs Qt::Core Qt::Widgets Qt::Xml Qt::OpenGL Qt::OpenGLWidgets)
+#endif()
+find_package(Qt5 REQUIRED COMPONENTS Core Widgets Xml OpenGL)
+if(Qt5_FOUND)
+    message("Qt5 found! Preferring Qt5 for now.")
     set(QtLibs Qt::Core Qt::Widgets Qt::Xml Qt::OpenGL)
 endif()
 
@@ -100,8 +101,8 @@ set(UI_FILES
     QGLViewer/VRenderInterface.ui
     )
 
-qt5_wrap_cpp(MOC_FILES ${MOC_HEADER_FILES})
-qt5_wrap_ui(FORM_FILES ${UI_FILES})
+#qt5_wrap_cpp(MOC_FILES ${MOC_HEADER_FILES})
+#qt5_wrap_ui(FORM_FILES ${UI_FILES})
 
 add_library(QGLViewer SHARED ${HEADER_FILES} ${MOC_FILES} ${FORM_FILES} ${SOURCE_FILES})
 
